[gd_scene load_steps=23 format=2]

[ext_resource path="res://PlayerScripts/PlatformerMovement.gd" type="Script" id=1]
[ext_resource path="res://Stages/Backgrounds/Cave.png" type="Texture" id=2]
[ext_resource path="res://Stages/Backgrounds/Dark Background.png" type="Texture" id=3]
[ext_resource path="res://Style/IMPACT_TEXT.tres" type="Theme" id=4]
[ext_resource path="res://Classes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Scenes/ui_header.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Scenes/pause_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Scenes/pause_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Sprites/Inner Circle.png" type="Texture" id=9]
[ext_resource path="res://Style/DEFAULT_TEXT.tres" type="Theme" id=10]
[ext_resource path="res://Style/m3x6.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://UI/Sprites/Outer Rim.png" type="Texture" id=12]
[ext_resource path="res://Classes/InputEventHander.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Game Over"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Current:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, 8 ), Vector2( 0, -128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Next:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 144 ), Vector2( 0, 144 ), Vector2( 0, 8 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WinDropper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 7.17882e-005, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 160, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Activate"
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("QTECircle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("QTEBackground:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("QTELabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QTECircle:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.47, 0.47 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Miner/Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Miner/Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Miner/Node2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fail"
tracks/0/type = "value"
tracks/0/path = NodePath("Miner/Revive:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Miner/Revive:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Miner/Revive:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Miner/Revive/Label:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "MISS!" ]
}

[sub_resource type="Animation" id=9]
resource_name = "Success"
tracks/0/type = "value"
tracks/0/path = NodePath("Miner/Revive:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Miner/Revive:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Miner/Revive:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Miner/Revive/Label:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "REVIVE!" ]
}

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 1
outline_color = Color( 0.658824, 0.752941, 0.690196, 1 )
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )
Label/colors/font_color = Color( 0.878431, 0.941176, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 0.878431, 0.941176, 0.909804, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Node2D" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 80, 72 )
texture = ExtResource( 2 )

[node name="QTEBackground" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 72 )
texture = ExtResource( 3 )

[node name="Current" type="Node2D" parent="."]
position = Vector2( 0, 8 )

[node name="Next" type="Node2D" parent="."]
position = Vector2( 0, 144 )

[node name="Miners" type="Node2D" parent="."]

[node name="GameOver" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 72 )
texture = ExtResource( 3 )

[node name="GameOverLabel" type="Label" parent="."]
margin_top = 39.0
margin_right = 160.0
margin_bottom = 53.0
theme = ExtResource( 4 )
text = "GAME OVER"
align = 1
percent_visible = 0.0

[node name="Miner" parent="." instance=ExtResource( 5 )]

[node name="Node2D" type="Node2D" parent="Miner"]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -16 )

[node name="Label" type="Label" parent="Miner/Node2D"]
margin_left = -19.0
margin_top = -24.0
margin_right = 21.0
margin_bottom = -10.0
theme = ExtResource( 4 )
text = "LEVEL UP!"
align = 1

[node name="Revive" type="Node2D" parent="Miner"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -16 )

[node name="Label" type="Label" parent="Miner/Revive"]
margin_left = -19.0
margin_top = -24.0
margin_right = 21.0
margin_bottom = -10.0
theme = ExtResource( 4 )
text = "MISS!"
align = 1

[node name="ui_header" parent="." instance=ExtResource( 6 )]

[node name="pause_button" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 14, 14 )

[node name="Pause" type="Button" parent="."]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = 9.0
margin_right = 13.0
margin_bottom = 29.0
rect_scale = Vector2( 2.16, 0.520002 )

[node name="pause_menu" parent="." instance=ExtResource( 8 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Game Over" = SubResource( 1 )
"anims/Scene Switch" = SubResource( 2 )
anims/Win_spawner = SubResource( 3 )

[node name="WinDropper" type="Node2D" parent="."]
position = Vector2( 160, 0 )

[node name="QuickTimeEvent" type="AnimationPlayer" parent="."]
anims/Activate = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Level_Up = SubResource( 4 )

[node name="RevivePlayer" type="AnimationPlayer" parent="."]
anims/Fail = SubResource( 8 )
anims/Success = SubResource( 9 )

[node name="QTELabel" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 76 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="QTELabel"]
margin_left = -20.0
margin_top = -26.0
margin_right = 20.0
margin_bottom = -12.0
theme = ExtResource( 10 )
text = "PRESS"
align = 1

[node name="Label3" type="Label" parent="QTELabel"]
margin_left = -20.0
margin_top = 9.0
margin_right = 20.0
margin_bottom = 23.0
theme = ExtResource( 10 )
text = "IN TIME!"
align = 1

[node name="Label2" type="Label" parent="QTELabel"]
margin_left = -20.0
margin_top = -23.0
margin_right = 20.0
margin_bottom = 15.0
theme = SubResource( 7 )
text = "'F'"
align = 1

[node name="QTECircle" type="Sprite" parent="."]
visible = false
position = Vector2( 80, 76 )
scale = Vector2( 0.8675, 0.8675 )
texture = ExtResource( 12 )

[node name="InputEventHandler" parent="." instance=ExtResource( 13 )]
pause_mode = 2
[connection signal="add_miner" from="ui_header" to="." method="_on_ui_header_add_miner"]
[connection signal="revive" from="ui_header" to="." method="revive"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="unpause" from="pause_menu" to="." method="_on_pause_menu_unpause"]
